2005-02-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sha256.tcl:  SHA-224 and SHA-256 pure-Tcl implementation
	* sha256.test: Tests from FIPS 180-2 for SHA-224 and SHA-256
	This is the first version. It is correct (in that it passes the
	FIPS test vectors) but slow. Speedups to follow.

2005-02-21  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sha1.h: replaced the possibly buggy sample extension implementation
	* sha1.c: with shiny new code from the NetBSD project.

	* sha1.test: Added some file tests (16K and 81K)
	* sha1.tcl: Replaced steps 1 and 3 with slightly more efficient
	but equivalent bit operations. Fixed an error with integer length
	exposed with tcl8.5. Verified 8.2-8.5

2005-02-20  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sha1c.tcl: Imported the sha1 implementation from the Tcl sample
	* sample.h:  extension and created a critcl wrapper.
	* sample.c:  Added to the sak.tcl critcl generation code.
	
	* sha1.tcl:  Re-implemented to support hashing data in chunks
	* sha1.test: Included tests from RFC 2202 for HMAC-SHA1.
	* sha1.man:  This time we have kept the same API but with optional
	extensions to use files/channels and to request the result as
	binary. Now supports token based hashing as in md4, md5 and ripemd.
	Incremented version to 2.0.0

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.4 ========================
	* 

2003-04-10  Andreas Kupries  <andreask@activestate.com>

	* pkgIndex.tcl:
	* sha1.man: